fix: scrollbar

--- a/src/plugin/introduce/index.less
+++ b/src/plugin/introduce/index.less
@@ -95,6 +95,7 @@ div#gd5 {
 
         &::-webkit-scrollbar {
             width: 4px;
+            height: 4px;
         }
         &::-webkit-scrollbar-thumb {
             background: #5c0d12;
